--- a/Hard/technical-documentation-page/index.html
+++ b/Hard/technical-documentation-page/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <nav id="navbar">
-      <header>
-        <h1>JavaScript Documentation</h1>
-      </header>
       <ul>
+        <li><h1>JS Quicklinks</h1></li>
         <li>
           <a href="#Introduction" class="nav-link">Introduction</a>
         </li>
@@ -156,10 +154,12 @@
           To get started with writing JavaScript, open the Scratchpad and write
           your first "Hello world" JavaScript code:
         </p>
-        <code>
-          function greetMe(yourName) { alert("Hello " + yourName); }
-          greetMe("World");
-        </code>
+        <div class="code-me">
+          <code>
+            function greetMe(yourName) { alert("Hello " + yourName); }
+            greetMe("World");
+          </code>
+        </div>
         <p>
           Select the code in the pad and hit Ctrl+R to watch it unfold in your
           browser!
@@ -193,18 +193,27 @@
         </header>
         <p>You can declare a variable in three ways:</p>
         <p>With the keyword var. For example,</p>
-        <code> var x = 42. </code>
+        <div class="code-me">
+          <code> var x = 42. </code>
+        </div>
+
         <p>
           This syntax can be used to declare both local and global variables.
         </p>
         <p>By simply assigning it a value. For example,</p>
-        <code> x = 42; </code>
+        <div class="code-me">
+          <code> x = 42; </code>
+        </div>
+
         <p>
           This always declares a global variable. It generates a strict
           JavaScript warning. You shouldn't use this variant.
         </p>
         <p>With the keyword let. For example,</p>
-        <code> let y = 13; </code>
+        <div class="code-me">
+          <code> let y = 13; </code>
+        </div>
+
         <p>
           This syntax can be used to declare a block scope local variable. See
           Variable scope below.
@@ -229,15 +238,19 @@
           global context) within which x is declared, not the block, which in
           this case is an if statement.
         </p>
-        <code> if (true) { var x = 5; } console.log(x); // 5 </code>
+        <div class="code-me">
+          <code> if (true) { var x = 5; } console.log(x); // 5 </code>
+        </div>
         <p>
           This behavior changes, when using the let declaration introduced in
           ECMAScript 2015.
         </p>
-        <code>
-          if (true) { let y = 5; } console.log(y); // ReferenceError: y is not
-          defined
-        </code>
+        <div class="code-me">
+          <code>
+            if (true) { let y = 5; } console.log(y); // ReferenceError: y is not
+            defined
+          </code>
+        </div>
       </section>
       <section class="main-section" id="Global_variables">
         <header>
@@ -266,7 +279,9 @@
           identifier: it must start with a letter, underscore or dollar sign and
           can contain alphabetic, numeric, or underscore characters.
         </p>
-        <code>const PI = 3.14;</code>
+        <div class="code-me">
+          <code>const PI = 3.14;</code>
+        </div>
         <p>
           A constant cannot change value through assignment or be re-declared
           while the script is running. It has to be initialized to a value.
@@ -280,19 +295,24 @@
           You cannot declare a constant with the same name as a function or
           variable in the same scope. For example:
         </p>
-        <code
-          >// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS
-          WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
-          //statements }</code
-        >
+        <div class="code-me">
+          <code
+            >// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS
+            WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
+            //statements }</code
+          >
+        </div>
+
         <p>
           However, object attributes are not protected, so the following
           statement is executed without problems.
         </p>
-        <code
-          >const MY_OBJECT = {"key": "value"}; MY_OBJECT.key =
-          "otherValue";</code
-        >
+        <div class="code-me">
+          <code
+            >const MY_OBJECT = {"key": "value"}; MY_OBJECT.key =
+            "otherValue";</code
+          >
+        </div>
       </section>
       <section class="main-section" id="Data_types">
         <header>
@@ -337,7 +357,9 @@
           true. Use the optional else clause to execute a statement if the
           condition is false. An if statement looks as follows:
         </p>
-        <code>if (condition) { statement_1; } else { statement_2; }</code>
+        <div class="code-me">
+          <code>if (condition) { statement_1; } else { statement_2; }</code>
+        </div>
         <p>
           condition can be any expression that evaluates to true or false. See
           Boolean for an explanation of what evaluates to true and false. If
@@ -349,11 +371,14 @@
           You may also compound the statements using else if to have multiple
           conditions tested in sequence, as follows:
         </p>
-        <code
-          >if (condition_1) { statement_1; } else if (condition_2) {
-          statement_2; } else if (condition_n) { statement_n; } else {
-          statement_last; }</code
-        >
+        <div class="code-me">
+          <code>
+            if (condition_1) { statement_1; } else if (condition_2) {
+            statement_2; } else if (condition_n) { statement_n; } else {
+            statement_last; }
+          </code>
+        </div>
+
         <p>
           In the case of multiple conditions only the first logical condition
           which evaluates to true will be executed. To execute multiple
@@ -361,24 +386,31 @@
           general, it's good practice to always use block statements, especially
           when nesting if statements:
         </p>
-        <code
-          >if (condition) { statement_1_runs_if_condition_is_true;
-          statement_2_runs_if_condition_is_true; } else {
-          statement_3_runs_if_condition_is_false;
-          statement_4_runs_if_condition_is_false; }</code
-        >
+        <div class="code-me">
+          <code>
+            if (condition) { statement_1_runs_if_condition_is_true;
+            statement_2_runs_if_condition_is_true; } else {
+            statement_3_runs_if_condition_is_false;
+            statement_4_runs_if_condition_is_false; }
+          </code>
+        </div>
+
         <p>
           It is advisable to not use simple assignments in a conditional
           expression, because the assignment can be confused with equality when
           glancing over the code. For example, do not use the following code:
         </p>
-        <code>if (x = y) { /* statements here */ }</code>
+        <div class="code-me">
+          <code>if (x = y) { /* statements here */ }</code>
+        </div>
         <p>
           If you need to use an assignment in a conditional expression, a common
           practice is to put additional parentheses around the assignment. For
           example:
         </p>
-        <code>if ((x = y)) { /* statements here */ }</code>
+        <div class="code-me">
+          <code>if ((x = y)) { /* statements here */ }</code>
+        </div>
       </section>
       <section class="main-section" id="while_statement">
         <header>
@@ -388,7 +420,8 @@
           A while statement executes its statements as long as a specified
           condition evaluates to true. A while statement looks as follows:
         </p>
-        <code>while (condition) statement</code>
+        <div class="code-me"><code>while (condition) statement</code></div>
+
         <p>
           If the condition becomes false, statement within the loop stops
           executing and control passes to the statement following the loop.
@@ -407,7 +440,9 @@
         <p>
           The following while loop iterates as long as n is less than three:
         </p>
-        <code>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</code>
+        <div class="code-me">
+          <code>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</code>
+        </div>
         <p>
           With each iteration, the loop increments n and adds that value to x.
           Therefore, x and n take on the following values:
@@ -445,14 +480,18 @@
           For example, the following code defines a simple function named
           square:
         </p>
-        <code>function square(number) { return number * number; }</code>
+        <div class="code-me">
+          <code>function square(number) { return number * number; }</code>
+        </div>
         <p>
           The function square takes one argument, called number. The function
           consists of one statement that says to return the argument of the
           function (that is, number) multiplied by itself. The return statement
           specifies the value returned by the function.
         </p>
-        <code>return number * number;</code>
+        <div class="code-me">
+          <code>return number * number;</code>
+        </div>
         <p>
           Primitive parameters (such as a number) are passed to functions by
           value; the value is passed to the function, but if the function
@@ -467,7 +506,12 @@
         <ul>
           <li>
             All the documentation in this page is taken from
-            <a href="">MDN</a>
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+              target="_blank"
+              rel="noopener"
+              >MDN</a
+            >
           </li>
         </ul>
       </section>
