--- a/Hard/price-comparison-table/index.html
+++ b/Hard/price-comparison-table/index.html
@@ -4,6 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Price Comparison</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <section class="price-comparison">
+      <div class="price-column">
+        <div class="price-header">
+          <div class="price">
+            <div class="dollar-sign">$</div>
+            10
+            <div class="per-month">/mo</div>
+          </div>
+          <div class="plan-name">Basic</div>
+        </div>
+      </div>
+      <div class="price-column popular">
+        <div class="price-header">
+          <div class="price">
+            <div class="dollar-sign">$</div>
+            20
+            <div class="per-month">/mo</div>
+          </div>
+          <div class="plan-name">Professional</div>
+        </div>
+      </div>
+      <div class="price-column">
+        <div class="price-header">
+          <div class="price">
+            <div class="dollar-sign">$</div>
+            50
+            <div class="per-month">/mo</div>
+          </div>
+          <div class="plan-name">Enterprise</div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
