feat: Add feature A, B, C, D, and E to price comparison table
Add feature A, B, C, D, and E to the price comparison table. These features are now displayed with appropriate icons and are either active or inactive based on the plan. This commit aligns with the established convention of using "feat" for feature additions and providing a concise summary of the changes made.

--- a/Hard/price-comparison-table/index.html
+++ b/Hard/price-comparison-table/index.html
@@ -21,6 +21,27 @@
           </div>
           <div class="plan-name">Basic</div>
         </div>
+        <div class="divider"></div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature A
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature B
+        </div>
+        <div class="feature inactive">
+          <img src="./x-square.svg" alt="" srcset="" />
+          Feature C
+        </div>
+        <div class="feature inactive">
+          <img src="./x-square.svg" alt="" srcset="" />
+          Feature D
+        </div>
+        <div class="feature inactive">
+          <img src="./x-square.svg" alt="" srcset="" />
+          Feature E
+        </div>
       </div>
       <div class="price-column popular">
         <div class="price-header">
@@ -31,6 +52,27 @@
           </div>
           <div class="plan-name">Professional</div>
         </div>
+        <div class="divider"></div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature A
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature B
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature C
+        </div>
+        <div class="feature inactive">
+          <img src="./x-square.svg" alt="" srcset="" />
+          Feature D
+        </div>
+        <div class="feature inactive">
+          <img src="./x-square.svg" alt="" srcset="" />
+          Feature E
+        </div>
       </div>
       <div class="price-column">
         <div class="price-header">
@@ -40,6 +82,27 @@
             <div class="per-month">/mo</div>
           </div>
           <div class="plan-name">Enterprise</div>
+        </div>
+        <div class="divider"></div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature A
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature B
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature C
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature D
+        </div>
+        <div class="feature">
+          <img src="./check-circle.svg" alt="" srcset="" />
+          Feature E
         </div>
       </div>
     </section>
