--- a/Hard/price-comparison-table/index.html
+++ b/Hard/price-comparison-table/index.html
@@ -42,8 +42,10 @@
           <img src="./x-square.svg" alt="" srcset="" />
           Feature E
         </div>
+        <button class="cta">Start Today</button>
       </div>
       <div class="price-column popular">
+        <div class="most-popular">Most Popular</div>
         <div class="price-header">
           <div class="price">
             <div class="dollar-sign">$</div>
@@ -73,6 +75,7 @@
           <img src="./x-square.svg" alt="" srcset="" />
           Feature E
         </div>
+        <button class="cta">Start Today</button>
       </div>
       <div class="price-column">
         <div class="price-header">
@@ -104,6 +107,7 @@
           <img src="./check-circle.svg" alt="" srcset="" />
           Feature E
         </div>
+        <button class="cta">Start Today</button>
       </div>
     </section>
   </body>
