--- a/Hard/vertical-timeline/index.html
+++ b/Hard/vertical-timeline/index.html
@@ -5,70 +5,151 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vertical Timeline</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="notification-grid">
-      <div class="avatar">
-        <img src="https://picsum.photos/id/64/200" alt="" />
+    <section class="notification-section">
+      <div class="group-header">
+        <div class="group-title">Today</div>
+        <div class="group-date">Wednesday, Aug 14, 2024</div>
       </div>
-      <div class="notification-card">
-        <div class="notification-header">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 448 512"
-          >
-            <path
-              d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
-            />
-          </svg>
-          <div class="notification-title">Homi liked your photos</div>
-          <div class="notification-time">9:00 am</div>
+      <div class="notification-grid">
+        <div class="avatar">
+          <img src="https://picsum.photos/id/64/200" alt="" />
         </div>
-        <div class="notification-content">
-          The photo of you and a dog was liked by Homi
+        <div class="notification-card">
+          <div class="notification-header">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
+              />
+            </svg>
+            <div class="notification-title">Homi liked your photos</div>
+            <div class="notification-time">9:00 am</div>
+          </div>
+          <div class="notification-content">
+            The photo of you and a dog was liked by Homi
+          </div>
+        </div>
+        <div class="avatar">
+          <img src="https://picsum.photos/id/65/200" alt="" />
+        </div>
+        <div class="notification-card">
+          <div class="notification-header">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
+              />
+            </svg>
+            <div class="notification-title">Raj liked your photo</div>
+            <div class="notification-time">9:00 am</div>
+          </div>
+        </div>
+        <div class="avatar">
+          <img src="https://picsum.photos/id/53/200" alt="" />
+        </div>
+        <div class="notification-card">
+          <div class="notification-header">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
+              />
+            </svg>
+            <div class="notification-title">Homi liked your photos</div>
+            <div class="notification-time">9:00 am</div>
+          </div>
+          <div class="notification-content">
+            The photo of you and a dog was liked by Homi Lorem ipsum dolor sit
+            amet consectetur adis , dignissimos provident vtis
+          </div>
         </div>
       </div>
-      <div class="avatar">
-        <img src="https://picsum.photos/id/65/200" alt="" />
+    </section>
+    <section class="notification-section">
+      <div class="group-header">
+        <div class="group-title">Yesterday</div>
+        <div class="group-date">Tuesday, Aug 13, 2024</div>
       </div>
-      <div class="notification-card">
-        <div class="notification-header">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 448 512"
-          >
-            <path
-              d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
-            />
-          </svg>
-          <div class="notification-title">Raj liked your photo</div>
-          <div class="notification-time">9:00 am</div>
+      <div class="notification-grid">
+        <div class="avatar">
+          <img src="https://picsum.photos/id/64/200" alt="" />
+        </div>
+        <div class="notification-card">
+          <div class="notification-header">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
+              />
+            </svg>
+            <div class="notification-title">Homi liked your photos</div>
+            <div class="notification-time">9:00 am</div>
+          </div>
+          <div class="notification-content">
+            The photo of you and a dog was liked by Homi
+          </div>
+        </div>
+        <div class="avatar">
+          <img src="https://picsum.photos/id/65/200" alt="" />
+        </div>
+        <div class="notification-card">
+          <div class="notification-header">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
+              />
+            </svg>
+            <div class="notification-title">Raj liked your photo</div>
+            <div class="notification-time">9:00 am</div>
+          </div>
+        </div>
+        <div class="avatar">
+          <img src="https://picsum.photos/id/53/200" alt="" />
+        </div>
+        <div class="notification-card">
+          <div class="notification-header">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
+              />
+            </svg>
+            <div class="notification-title">Homi liked your photos</div>
+            <div class="notification-time">9:00 am</div>
+          </div>
+          <div class="notification-content">
+            The photo of you and a dog was liked by Homi Lorem ipsum dolor sit
+            amet consectetur adis , dignissimos provident vtis
+          </div>
         </div>
       </div>
-      <div class="avatar">
-        <img src="https://picsum.photos/id/53/200" alt="" />
-      </div>
-      <div class="notification-card">
-        <div class="notification-header">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 448 512"
-          >
-            <path
-              d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416l384 0c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8l0-18.8c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"
-            />
-          </svg>
-          <div class="notification-title">Homi liked your photos</div>
-          <div class="notification-time">9:00 am</div>
-        </div>
-        <div class="notification-content">
-          The photo of you and a dog was liked by Homi Lorem ipsum dolor sit
-          amet consectetur adis , dignissimos provident vtis
-        </div>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
