--- a/Hard/simple-product-landing-page/index.html
+++ b/Hard/simple-product-landing-page/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=McLaren&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header id="header">
-      <img src="" alt="" id="header-img" />
+      <img src="./Huawei-logo-new.png" alt="" id="header-img" />
       <nav id="nav-bar">
         <ul>
           <li><a class="nav-link" href="#Features">Features</a></li>
@@ -17,55 +23,66 @@
         </ul>
       </nav>
     </header>
-    <div class="form-container">
-      <form action="https://www.freecodecamp.com/email-submit" id="form">
-        <input
-          type="email"
-          placeholder="Enter your email address"
-          name="email"
-          id="email"
-        />
-        <input type="submit" id="submit" value="Get Started" />
-      </form>
+    <div class="container">
+      <div class="form-container">
+        <h1 id="hero-title">Welcome to Our Website</h1>
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <input
+            type="email"
+            placeholder="Enter your email address"
+            name="email"
+            id="email"
+          />
+          <input type="submit" id="submit" value="Get Started" />
+        </form>
+      </div>
+      <section class="features" id="Features">
+        <div class="feature-list">
+          <img src="./insta.png" alt="" class="feature-logo" />
+          <div>
+            <h2>Spotify Premium</h2>
+            <p>
+              Our trombones use the shiniest brass which is sourced locally.
+              This will increase the longevity of your purchase.
+            </p>
+          </div>
+        </div>
+        <div class="feature-list">
+          <img src="./telegram.png" alt="" class="feature-logo" />
+          <div>
+            <h2>Fast Shipping</h2>
+            <p>
+              We make sure you recieve your trombone as soon as we have finished
+              making it. We also provide free returns if you are not satisfied.
+            </p>
+          </div>
+        </div>
+        <div class="feature-list">
+          <img src="./whatsapp.png" alt="" class="feature-logo" />
+          <div>
+            <h2>Quality Assurance</h2>
+            <p>
+              For every purchase you make, we will ensure there are no damages
+              or faults and we will check and test the pitch of your instrument.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="HowItWorks" id="How_It_Works">
+        <h2>How It Works</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+          quod.
+        </p>
+        <iframe
+          src="https://youtu.be/y8Yv4pnO7qc"
+          frameborder="0"
+          title="YouTube video"
+          id="video"
+        ></iframe>
+      </section>
+      <section class="Pricing" id="Pricing"></section>
     </div>
-    <section class="Features" id="Features">
-      <div class="feature-list">
-        <img src="" alt="" />
-        <h2>Feature 1</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quod.
-        </p>
-      </div>
-      <div class="feature-list">
-        <img src="" alt="" />
-        <h2>Feature 1</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quod.
-        </p>
-      </div>
-      <div class="feature-list">
-        <img src="" alt="" />
-        <h2>Feature 1</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quod.
-        </p>
-      </div>
-    </section>
-    <section class="HowItWorks" id="How_It_Works">
-      <h2>How It Works</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
-      </p>
-      <iframe
-        src="https://youtu.be/y8Yv4pnO7qc"
-        frameborder="0"
-        title="YouTube video"
-        id="video"
-      ></iframe>
-    </section>
-    <section class="Pricing" id="Pricing"></section>
+    <footer id="footer"></footer>
   </body>
 </html>
