--- a/Hard/simple-product-landing-page/index.html
+++ b/Hard/simple-product-landing-page/index.html
@@ -3,30 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>SampleShop - Premium Musical Instruments</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=McLaren&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=McLaren&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header id="header">
-      <img src="./Huawei-logo-new.png" alt="" id="header-img" />
+      <img src="./Huawei-logo-new.png" alt="SampleShop Logo" id="header-img" />
       <nav id="nav-bar">
         <ul>
           <li><a class="nav-link" href="#Features">Features</a></li>
           <li><a class="nav-link" href="#How_It_Works">How It Works</a></li>
           <li><a class="nav-link" href="#Pricing">Pricing</a></li>
+          <li><a class="nav-link" href="#Testimonials">Testimonials</a></li>
+          <li><a class="nav-link" href="#Contact">Contact Us</a></li>
         </ul>
       </nav>
     </header>
+
     <div class="container">
-      <div class="form-container">
-        <h1 id="hero-title">Welcome to Our Website</h1>
-        <form action="https://www.freecodecamp.com/email-submit" id="form">
+      <div class="hero-section">
+        <h1 id="hero-title">Discover Premium Musical Instruments</h1>
+        <p id="hero-subtitle">Crafted with precision, delivered with care.</p>
+        <form
+          action="https://www.freecodecamp.com/email-submit"
+          id="form"
+          class="form-container"
+        >
           <input
             type="email"
             placeholder="Enter your email address"
@@ -36,53 +44,148 @@
           <input type="submit" id="submit" value="Get Started" />
         </form>
       </div>
+
       <section class="features" id="Features">
+        <h2>Why Choose Us?</h2>
         <div class="feature-list">
-          <img src="./insta.png" alt="" class="feature-logo" />
+          <img src="./insta.png" alt="Spotify Premium" class="feature-logo" />
           <div>
-            <h2>Spotify Premium</h2>
+            <h3>Spotify Premium</h3>
             <p>
-              Our trombones use the shiniest brass which is sourced locally.
-              This will increase the longevity of your purchase.
+              Our instruments are used by top artists worldwide, ensuring the
+              highest quality sound for your music.
             </p>
           </div>
         </div>
         <div class="feature-list">
-          <img src="./telegram.png" alt="" class="feature-logo" />
+          <img src="./telegram.png" alt="Fast Shipping" class="feature-logo" />
           <div>
-            <h2>Fast Shipping</h2>
+            <h3>Fast Shipping</h3>
             <p>
-              We make sure you recieve your trombone as soon as we have finished
-              making it. We also provide free returns if you are not satisfied.
+              Get your instrument quickly, with free returns if you're not
+              completely satisfied.
             </p>
           </div>
         </div>
         <div class="feature-list">
-          <img src="./whatsapp.png" alt="" class="feature-logo" />
+          <img
+            src="./whatsapp.png"
+            alt="Quality Assurance"
+            class="feature-logo"
+          />
           <div>
-            <h2>Quality Assurance</h2>
+            <h3>Quality Assurance</h3>
             <p>
-              For every purchase you make, we will ensure there are no damages
-              or faults and we will check and test the pitch of your instrument.
+              Every instrument is tested for quality and pitch before it reaches
+              you.
             </p>
           </div>
         </div>
       </section>
+
       <section class="HowItWorks" id="How_It_Works">
         <h2>How It Works</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quod.
+          From selection to delivery, here's how we bring music to your
+          doorstep.
         </p>
         <iframe
-          src="https://youtu.be/y8Yv4pnO7qc"
+          src="https://www.youtube.com/embed/y8Yv4pnO7qc"
           frameborder="0"
           title="YouTube video"
           id="video"
         ></iframe>
       </section>
-      <section class="Pricing" id="Pricing"></section>
+
+      <section class="Pricing" id="Pricing">
+        <h2>Our Pricing Plans</h2>
+        <p>Choose the perfect plan for your musical journey.</p>
+        <div class="pricing-container">
+          <div class="pricing-plan basic">
+            <div class="price-header">
+              <h3>Basic</h3>
+            </div>
+            <div class="price">
+              <h2>$9.99</h2>
+            </div>
+            <div class="plan-details">
+              <p>1 Trombone</p>
+              <p>1 Case</p>
+              <p>1 Mouthpiece</p>
+            </div>
+            <button class="cta">Select</button>
+          </div>
+          <div class="pricing-plan standard">
+            <div class="price-header">
+              <h3>Standard</h3>
+            </div>
+            <div class="price">
+              <h2>$19.99</h2>
+            </div>
+            <div class="plan-details">
+              <p>2 Trombones</p>
+              <p>2 Cases</p>
+              <p>2 Mouthpieces</p>
+            </div>
+            <button class="cta">Select</button>
+          </div>
+          <div class="pricing-plan premium">
+            <div class="price-header">
+              <h3>Premium</h3>
+            </div>
+            <div class="price">
+              <h2>$29.99</h2>
+            </div>
+            <div class="plan-details">
+              <p>3 Trombones</p>
+              <p>3 Cases</p>
+              <p>3 Mouthpieces</p>
+            </div>
+            <button class="cta">Select</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="Testimonials" id="Testimonials">
+        <h2>What Our Customers Say</h2>
+        <div class="testimonial-list">
+          <div class="testimonial">
+            <p>
+              "The quality of these instruments is unparalleled. I am extremely
+              satisfied!"
+            </p>
+            <h4>- Jane Doe</h4>
+          </div>
+          <div class="testimonial">
+            <p>
+              "Fast delivery and amazing customer service. Highly recommended!"
+            </p>
+            <h4>- John Smith</h4>
+          </div>
+          <div class="testimonial">
+            <p>
+              "Great value for money. I'll definitely buy from SampleShop
+              again."
+            </p>
+            <h4>- Emma Johnson</h4>
+          </div>
+        </div>
+      </section>
+
+      <section class="Contact" id="Contact">
+        <h2>Contact Us</h2>
+        <p>Have questions? We're here to help!</p>
+        <form id="contact-form">
+          <input type="text" placeholder="Your Name" required />
+          <input type="email" placeholder="Your Email" required />
+          <textarea placeholder="Your Message" required></textarea>
+          <button type="submit" class="cta">Send Message</button>
+        </form>
+      </section>
+
+      <footer id="footer">
+        <p>&copy; 2024 SampleLandingPage | Designed with ❤️ by Navarasan</p>
+      </footer>
     </div>
-    <footer id="footer"></footer>
   </body>
 </html>
